# eval

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api.md  index.md
docs/concepts/: calibration.md  epistemic_security.md
examples/kit/: run_causal_demo.py  run_slicing_demo.py
src/xrtm/eval/: __init__.py  version.py
src/xrtm/eval/core/: __init__.py  verification.py
src/xrtm/eval/core/eval/: __init__.py  aggregation.py  bayesian.py  definitions.py
src/xrtm/eval/core/schemas/: __init__.py  forecast.py
src/xrtm/eval/kit/eval/: __init__.py  analytics.py  bias.py  epistemic_evaluator.py  intervention.py  metrics.py  resilience.py  viz.py  workbench.py
src/xrtm/eval/providers/: __init__.py
src/xrtm/eval/schemas/: __init__.py  forecast.py
tests/: test_bias.py  test_ece.py  test_metrics.py
